index.html commit after modif

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         boat
     </li>
     <li>
-        spaceship 2
+        spaceship 2 is now 3 from cosminium
     </li>
     <li>
         car
